# rust_metal_miner

./: Cargo.toml  README.md  adaptive_mask_stage.air  chaos_lut_output.metal  gen_chaos_lut.py  miner_kernel.air  sha256_stage.air  weighting_stage.air  weighting_stage.metal
python_entropy_analyzer/: analyzer.py  bayes.py  entropy.py  utils.py
quantum/: reversible_adders.qiskit.py  reversible_sha64_grover.py
shaders/: adaptive_mask_stage.metal  fwht_stage.air  fwht_stage.metal  kernels.metallib  miner_kernel.metal  miner_kernel.metallib  miner_kernel_preprocessed.metal  prune_kernel.metal  sha256_stage.air  sha256_stage.metal  weighting_stage.metal
src/: adaptive.rs  coinbase.rs  constants.rs  dp_table.rs  gpu.rs  main.rs  mitm.rs  rpc.rs  sha_helpers.rs  ui.rs
tests/: gpu_hash_verify.rs
